@@ -1421,8 +1421,8 @@ func_require_ac_aux_dir ()
     $require_configure_ac
 
     test -n "$configure_ac" && {
-      func_extract_trace AC_CONFIG_AUX_DIR
-      ac_aux_dir=$func_extract_trace_result
+      func_extract_trace_first AC_CONFIG_AUX_DIR
+      ac_aux_dir=$func_extract_trace_first_result
 
       case $ac_aux_dir in
         *\$*)
@@ -1449,8 +1449,8 @@ func_require_ac_ltdl_dir ()
     $require_configure_ac
 
     if test -n "$configure_ac"; then
-      func_extract_trace LT_CONFIG_LTDL_DIR
-      ac_ltdl_dir=`expr "$func_extract_trace_result" : '\([^:]*\)'`
+      func_extract_trace_first LT_CONFIG_LTDL_DIR
+      ac_ltdl_dir=$func_extract_trace_first_result
 
       case $ac_ltdl_dir in
         *\$*)
@@ -1498,8 +1498,8 @@ func_require_ac_ltdl_options ()
     $require_configure_ac
 
     if test -n "$configure_ac"; then
-      func_extract_trace LTDL_INIT
-      ac_ltdl_options=$func_extract_trace_result
+      func_extract_trace_first LTDL_INIT
+      ac_ltdl_options=$func_extract_trace_first_result
 
       case $ac_ltdl_options in
         *\$*)
@@ -1524,8 +1524,8 @@ func_require_ac_macro_dir ()
     $require_configure_ac
 
     if test -n "$configure_ac"; then
-      func_extract_trace AC_CONFIG_MACRO_DIR
-      ac_macro_dir=$func_extract_trace_result
+      func_extract_trace_first AC_CONFIG_MACRO_DIR
+      ac_macro_dir=$func_extract_trace_first_result
     fi
 
     require_ac_macro_dir=:
